<resources>
    <string name="app_name">Meus Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Cliente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="modelo_fragment">Cliente VIP DEMO</string>

    <!-- Opções do Menu Lateral Drawer -->
    <string name="listar_clientes_fragment">Lista de Clientes</string>
    <string name="listar_de_clientes_main">Lista de Clientes</string>
    <string name="lista_de_clientes_cards">Lista de Clientes(CARDS)</string>


    <string name="adicionar_cliente_main">Adicionar Cliente</string>
    <string name="titulo_cliente">Cliente</string>
    <string name="novo_cliente">Adicionar Novo Cliente</string>
    <string name="adicionar_cliente_cards">Adicionar Cliente (CARDS)</string>

    <string name="fragmento_preto">Fragmento Preto</string>
    <string name="titulo_preto">Preto</string>

    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="titulo_vermelho">Vermelho</string>

    <string name="fragmento_azul">Fragmento Azul</string>
    <string name="titulo_azul">Azul</string>

    <!-- Opções do Menu Principal -->
    <string name="meu_perfil">Meu Perfil</string>
    <string name="txtPerfilContato">Perfil e Contato</string>
    <string name="txtEndereco">Endereço</string>
    <string name="txt_app_cliente">APP CLIENTE</string>

    <!-- Tela Splahs -->
    <string name="txt_versao">v0.0.0</string>

    <!-- Tela de Login -->
    <string name="txt_btnLogin">LOGIN</string>
    <string name="txtLogin">Login</string>
    <string name="txt_RecuperarSenhaEmail">Informe seu email</string>
    <string name="txt_InformeSenha">Informe a Senha</string>
    <string name="txtLembrar">Lembrar credenciais</string>
    <string name="txtVerificarDados">* Verifique os dados e tente novamente</string>
    <string name="txtEsqueciSenha">Esqueci a senha</string>
    <string name="txtExemploTelefone">00 00000-00</string>
    <string name="txtSenhaCriptografada">********</string>
    <string name="txtBtnCadastre_se">Cadastre-se</string>
    <string name="txtViewCadastro">Cadastro</string>
    <string name="txtViewNovoUsuarioCadastro">Novo usuário</string>
    <string name="editNomeCompleto_Cadastro">Nome Completo</string>
    <string name="editEmail_Cadastro">Email</string>
    <string name="editSenhaCadastro">Senha</string>
    <string name="editConfirmarSenhaCadastro">Confirmar Senha</string>
    <string name="bntConfirmar_Cadastro">confirmar</string>
    <string name="btnVoltar_Cadastro">Voltar</string>
    <string name="txt_recuperar_senha">Recuperar Senha</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtCancelar">cancelar</string>
    <string name="txt_LoginInformeEmail">Informe o email</string>
    <string name="txtExemploEmail">email@email.com.br</string>
    <string name="listar_menu">Menu</string>
    <string name="edittxt_pesquisar">Pesquisar</string>

    <!-- tela de Cadastro -->

</resources>
