<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/listar_menu"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/listar_menu" />

        <item android:id="@+id/listar_clientes_nav"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/listar_de_clientes_main" />

        <item android:id="@+id/listar_clientes_cards_nav"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/lista_de_clientes_cards" />

        <item android:id="@+id/adicionar_cliente_nav"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/adicionar_cliente_main" />

        <item android:id="@+id/adicionar_cliente_cards_nav"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/adicionar_cliente_cards" />


    </group>

</menu>
